--- a/src/shared/components/w-object-list/w-object-list-modal.component.scss
+++ b/src/shared/components/w-object-list/w-object-list-modal.component.scss
@@ -22,7 +22,7 @@
     padding: 0;
   }
   .modal-selection-toolbar {
-    padding: 5px 15px;
+    padding: 0 15px;
     position: relative;
     background-color: #ffffff;
     @include clearfix;
